src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Domain__c</fullName>
        <label>Email Domain</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <label>Primary</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ProductInterest__c</fullName>
        <label>Product Interest</label>
        <picklist>
            <picklistValues>
                <fullName>GC1000 series</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC5000 series</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC3000 series</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SICCode__c</fullName>
        <label>SIC Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_Email_to_the_Owner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Email to the Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto2__Acquisition_Date__c</fullName>
        <label>Acquisition Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>mkto2__Acquisition_Program_Id__c</fullName>
        <label>Acquisition Program Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto2__Acquisition_Program__c</fullName>
        <label>Acquisition Program</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_City__c</fullName>
        <label>Inferred City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Company__c</fullName>
        <label>Inferred Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Country__c</fullName>
        <label>Inferred Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Metropolitan_Area__c</fullName>
        <label>Inferred Metropolitan Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Phone_Area_Code__c</fullName>
        <label>Inferred Phone Area Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Postal_Code__c</fullName>
        <label>Inferred Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_State_Region__c</fullName>
        <label>Inferred State Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Lead_Score__c</fullName>
        <label>Lead Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto2__Original_Referrer__c</fullName>
        <label>Original Referrer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Original_Search_Engine__c</fullName>
        <label>Original Search Engine</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Original_Search_Phrase__c</fullName>
        <label>Original Search Phrase</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Original_Source_Info__c</fullName>
        <defaultValue>&quot;Lead&quot;</defaultValue>
        <label>Original Source Info</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>mkto2__Original_Source_Type__c</fullName>
        <defaultValue>&quot;salesforce.com&quot;</defaultValue>
        <label>Original Source Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Add_to_Marketo_Campaign__c</fullName>
        <formula>HYPERLINK (&quot;/apex/mkto_si__Add_to_Marketo_Campaign_Mobile?contactType=Lead&amp;contactIds=&quot; &amp; Id, IMAGE(&quot;https://app.marketo.com/images/icons16/marketo16.png&quot;,&quot;Add to Marketo Campaign&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Add to Marketo Campaign</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__HideDate__c</fullName>
        <label>Hide Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>mkto_si__Last_Interesting_Moment_Date__c</fullName>
        <label>Last Interesting Moment Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>mkto_si__Last_Interesting_Moment_Desc__c</fullName>
        <label>Last Interesting Moment Desc</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>mkto_si__Last_Interesting_Moment_Source__c</fullName>
        <label>Last Interesting Moment Source</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Last_Interesting_Moment_Type__c</fullName>
        <label>Last Interesting Moment Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Last_Interesting_Moment__c</fullName>
        <formula>IF(!ISNULL(mkto_si__Last_Interesting_Moment_Date__c), 
HYPERLINK(&quot;/apex/mkto_si__Lead_Full_List?view=IM&amp;id=&quot; &amp; Id, mkto_si__Last_Interesting_Moment_Type__c &amp; &quot; -- &quot; &amp; mkto_si__Last_Interesting_Moment_Desc__c ), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Interesting Moment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__MSIContactId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MSIContactId</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>mkto_si__Priority__c</fullName>
        <label>Engagement</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto_si__Relative_Score_Value__c</fullName>
        <label>Relative Score Value</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto_si__Relative_Score__c</fullName>
        <formula>CASE( MIN(MAX(mkto_si__Relative_Score_Value__c, 0), 3),
    0, IMAGE(&quot;https://app.marketo.com/images/icons/star0.png&quot;,&quot;0&quot;),
    1, IMAGE(&quot;https://app.marketo.com/images/icons/star1.png&quot;,&quot;1&quot;),
    2, IMAGE(&quot;https://app.marketo.com/images/icons/star2.png&quot;,&quot;2&quot;),
    3, IMAGE(&quot;https://app.marketo.com/images/icons/star3.png&quot;,&quot;3&quot;),
    &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Relative Score</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Urgency_Value__c</fullName>
        <label>Urgency Value</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto_si__Urgency__c</fullName>
        <formula>CASE( MIN(MAX(mkto_si__Urgency_Value__c, 0),3),
    0, IMAGE(&quot;https://app.marketo.com/images/icons/fire0.png&quot;,&quot;0&quot;),
    1, IMAGE(&quot;https://app.marketo.com/images/icons/fire1.png&quot;,&quot;1&quot;),
    2, IMAGE(&quot;https://app.marketo.com/images/icons/fire2.png&quot;,&quot;2&quot;),
    3, IMAGE(&quot;https://app.marketo.com/images/icons/fire3.png&quot;,&quot;3&quot;),
    &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Urgency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__View_in_Marketo__c</fullName>
        <formula>HYPERLINK (&quot;/apex/mkto_si__Marketo_Lead_Detail?objType=Lead&amp;objId=&quot; &amp; Id, IMAGE(&quot;https://app.marketo.com/images/icons16/marketo16.png&quot;,&quot;View in Marketo&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View in Marketo</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>Send_Email_to_the_Owner__c</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.SALUTATION</columns>
        <columns>LEAD.LAST_NAME</columns>
        <columns>LEAD.FIRST_NAME</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.MOBILE_PHONE</columns>
        <columns>LEAD.FAX</columns>
        <columns>LEAD.STREET</columns>
        <columns>LEAD.CITY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.ZIP</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notContain</operation>
            <value>closed</value>
        </filters>
        <label>All Open Leads</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllOpenLeads_converted</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CONVERTED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Open Leads_converted</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <listViews>
        <fullName>ViewCustom1</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <label>View - Custom 1</label>
    </listViews>
    <listViews>
        <fullName>ViewCustom2</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <filterScope>Everything</filterScope>
        <label>View - Custom 2</label>
    </listViews>
    <sharingModel>ReadWriteTransfer</sharingModel>
</CustomObject>